--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
   </head>
 
   <body>
-   <h1> Trần Ngọc Minh Quân </h1>
-   <h4>STUDENT</h4>
+   <h1>Trần Ngọc Minh Quân</h1>
+   <h2>STUDENT</h2>
+
+   <figure>
+
+     <img src="images/me1.jpg" alt="Minh Quan">
+
+     <figcaption>
+
+       <h4>Trần Ngọc Minh Quân</h4>
+
+     </figcaption>
+   </figure>
+
 
    <p>
     Tôi tên là Trần Ngọc Minh Quân, sinh năm 1999, hiện tại là sinh viên năm 2 ngành CSE tại Viện Nghiên cứu và Đào tạo Việt Anh tại thành phố Đà Nẵng. Tôi đang tuyệt vọng trong học kì này, nhưng may mắn nhờ có người bạn chơi Bùi Lâm Quang Ngọc sẽ giúp tôi qua môn nên tôi cảm thấy có sức sống để tiếp tục cuộc hành trình đầy gian nan này.
@@ -21,5 +33,5 @@
    <p>
     Tôi có ước mơ ngồi không đếm tiền, mỗi ngày chỉ cần 1 tỉ trong tài khoản thì tôi đã mãn nguyện lắm rồi. Tôi sẽ phấn đấu để toại nguyện được ước mơ của mình. Cảm ơn các bạn đã bỏ thời gian cho tôi.
    </p>
-  </body>
+ </body>
 </html>
