--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
    <h2>STUDENT</h2>
 
    <figure>
-
+     
      <img src="images/me1.jpg" alt="Minh Quan">
 
-     <figcaption>
-
-       <h4>Trần Ngọc Minh Quân</h4>
-
-     </figcaption>
+     <figcaption>Trần Ngọc Minh Quân</figcaption>
    </figure>
 
 
