--- a/index.html
+++ b/index.html
@@ -7,106 +7,138 @@
   </head>
 
   <body>
-   <h1>Trần Ngọc Minh Quân</h1>
-   <h2>STUDENT</h2>
+   <div class="me">
+     <!-- Tran Ngoc Minh Quan -->
+     <h1>Trần Ngọc Minh Quân</h1>
+     <h2>STUDENT</h2>
 
-<!-- Tran Ngoc Minh Quan -->
-   <figure>
-     <img src="images/me1.jpg" alt="Minh Quan">
-     <figcaption>Trần Ngọc Minh Quân</figcaption>
-   </figure>
+     <figure>
+       <img src="images/me1.jpg" alt="Minh Quan">
+       <figcaption>Trần Ngọc Minh Quân</figcaption>
+     </figure>
 
-   <p>
-    Tôi tên là Trần Ngọc Minh Quân, sinh năm 1999, hiện tại là sinh viên năm 2 ngành CSE tại Viện Nghiên cứu và Đào tạo Việt Anh tại thành phố Đà Nẵng. Tôi đang tuyệt vọng trong học kì này, nhưng may mắn nhờ có người bạn chơi Bùi Lâm Quang Ngọc sẽ giúp tôi qua môn nên tôi cảm thấy có sức sống để tiếp tục cuộc hành trình đầy gian nan này.
-   </p>
+     <p>
+      Tôi tên là Trần Ngọc Minh Quân, sinh năm 1999, hiện tại là sinh viên năm 2 ngành CSE tại Viện Nghiên cứu và Đào tạo Việt Anh tại thành phố Đà Nẵng. Tôi đang tuyệt vọng trong học kì này, nhưng may mắn nhờ có người bạn chơi Bùi Lâm Quang Ngọc sẽ giúp tôi qua môn nên tôi cảm thấy có sức sống để tiếp tục cuộc hành trình đầy gian nan này.
+     </p>
 
-   <p>
-    Một năm kinh nghiệm trôi qua tại ngôi trường này để lại cho tôi nhiều kỉ niệm đáng nhớ cũng như đáng quên. Tuy nhiên tất cả đều là hành trang chuẩn bị cho tương lai của tôi.
-   </p>
+     <p>
+      Một năm kinh nghiệm trôi qua tại ngôi trường này để lại cho tôi nhiều kỉ niệm đáng nhớ cũng như đáng quên. Tuy nhiên tất cả đều là hành trang chuẩn bị cho tương lai của tôi.
+     </p>
 
-   <p>
-    Tôi có ước mơ ngồi không đếm tiền, mỗi ngày chỉ cần 1 tỉ trong tài khoản thì tôi đã mãn nguyện lắm rồi. Tôi sẽ phấn đấu để toại nguyện được ước mơ của mình. Cảm ơn các bạn đã bỏ thời gian cho tôi.
-   </p>
+     <p id="top">
+      Tôi có ước mơ ngồi không đếm tiền, mỗi ngày chỉ cần 1 tỉ trong tài khoản thì tôi đã mãn nguyện lắm rồi. Tôi sẽ phấn đấu để toại nguyện được ước mơ của mình. Cảm ơn các bạn đã bỏ thời gian cho tôi.
+      Những người mà tôi hâm mộ là: Song Minho, Kim Ji-soo, Christian Pulisic and Đặng Lê Nguyên Vũ.
+     </p>
+   </div>
 
-<!-- Song Minho-->
-   <h1>Song Minho</h1>
-   <h2>SINGER/DANCER</h2>
-   <figure>
-     <img src="images/mino2.jpg" alt="Song Minho">
-     <figcaption>Song Minho</figcaption>
-   </figure>
 
-   <p>
-    Song Mino bắt đầu sự nghiệp ca hát trong giới underground. Anh là rapper trong một khoảng thời gian cùng với Pyo Jihoon (P.O BLOCK B), Woo Jiho (Zico BLOCK B), Woo Jiseok (Taewoon SPEED), Sim Jongsu (SIMS M.I.B), Scotch VIP, và Roydo. Song Minho lấy nghệ danh là Mino hay là Hugeboy Mino, anh đã gia nhập vào Royal Class – một nhóm underground. Mino đã sáng tác và sản xuất nhiều bài hát/rap của riêng mình và nhiều bản mixtape khác.
-   </p>
+   <div class="people" id="song-minho">
+     <!-- Song Minho-->
+      <h1>Song Minho</h1>
+      <h2>SINGER/DANCER</h2>
 
-   <p>
-    Minho là một ngôi sao trong chương trình thực tế của YGE mang tên Who Is Next. Chương trình là cuộc chiến sống còn của 11 thực tập sinh được tuyển chọn và chia thành 2 nhóm A và B. Hai nhóm sẽ thi đấu với nhau và nhóm chiến thắng thông qua lượng bình chọn của khán giả sẽ được chính thức debut.
-   </p>
+       <figure>
+        <img src="images/mino2.jpg" alt="Song Minho">
+        <figcaption>Song Minho</figcaption>
+       </figure>
 
-   <p>
-    Giữa năm 2015, anh tham gia cuộc thi "Show me the money" season 4 thu hút sự chú ý của cộng đồng KPop. Ngay từ đầu chương trình, anh đã trở thành mục tiêu chỉ trích của hàng loạt thí sinh khác vì xuất thân thần tượng.
-   </p>
+       <p>
+        Song Mino bắt đầu sự nghiệp ca hát trong giới underground. Anh là rapper trong một khoảng thời gian cùng với Pyo Jihoon (P.O BLOCK B), Woo Jiho (Zico BLOCK B), Woo Jiseok (Taewoon SPEED), Sim Jongsu (SIMS M.I.B), Scotch VIP, và Roydo. Song Minho lấy nghệ danh là Mino hay là Hugeboy Mino, anh đã gia nhập vào Royal Class – một nhóm underground. Mino đã sáng tác và sản xuất nhiều bài hát/rap của riêng mình và nhiều bản mixtape khác.
+       </p>
 
-<!-- Kim Ji-soo -->
-    <h1>Kim Ji-soo</h1>
-    <h2>SINGER/DANCER</h2>
-    <figure>
-      <img src="images/jisoo2.jpg" alt="Kim Jisoo">
-      <figcaption>Kim Ji-soo</figcaption>
-    </figure>
+       <p>
+        Minho là một ngôi sao trong chương trình thực tế của YGE mang tên Who Is Next. Chương trình là cuộc chiến sống còn của 11 thực tập sinh được tuyển chọn và chia thành 2 nhóm A và B. Hai nhóm sẽ thi đấu với nhau và nhóm chiến thắng thông qua lượng bình chọn của khán giả sẽ được chính thức debut.
+       </p>
 
-    <p>
-     Kim Ji-soo (Hangul: 김지수, Hanja: 金智秀, Hán-Việt: Kim Trí Tú, sinh ngày 3 tháng 1 năm 1995), là một nữ ca sĩ thần tượng, diễn viên, người mẫu, MC người Hàn Quốc. Thành viên của nhóm nhạc nữ Black Pink do công ty giải trí YG Entertainment thành lập và quản lý. Cô được xem là nữ thần tượng thế hệ mới của K-pop được đánh giá cao nhờ tài năng và nhan sắc.
-    </p>
+       <p>
+        Giữa năm 2015, anh tham gia cuộc thi "Show me the money" season 4 thu hút sự chú ý của cộng đồng KPop. Ngay từ đầu chương trình, anh đã trở thành mục tiêu chỉ trích của hàng loạt thí sinh khác vì xuất thân thần tượng.
+       </p>
 
-    <p>
-      Kim Ji-soo sinh ngày 3 tháng 1 năm 1995 tại phường Sanbon-dong, thành phố Gunpo, tỉnh Gyeonggi, Hàn Quốc. Có một anh trai và một chị gái. Cô trở thành thực tập sinh chính thức của YG Entertainment vào tháng 7 năm 2011 và được đào tạo làm thực tập sinh 5 năm.
-    </p>
+       <audio controls>
+         <source src="audio/body.mp3" type="audio/mpeg">
+       </audio>
+   </div>
 
-    <p>
-      Ngày 15 tháng 6, YG tiết lộ hình ảnh của thành viên Jisoo, chị cả của nhóm, là người mẫu cho nhiều nhãn hiệu quảng cáo và diễn xuất trong nhiều video âm nhạc.
-    </p>
+   <div class="people" id="kim-jisoo">
+     <!-- Kim Ji-soo -->
+        <h1>Kim Ji-soo</h1>
+        <h2>SINGER/DANCER</h2>
 
-<!-- Christian Pulisic -->
-    <h1>Christian Pulisic</h1>
-    <h2>FOOTBALLER</h2>
-    <figure>
-     <img src="images/pulisic1.jpg" alt="Christian Pulisic">
-     <figcaption>Christian Pulisic</figcaption>
-      </figure>
+        <figure>
+          <img src="images/jisoo2.jpg" alt="Kim Jisoo">
+          <figcaption>Kim Ji-soo</figcaption>
+        </figure>
 
-      <p>
-        Christian Mate Pulisic (sinh ngày 18 tháng 9 năm 1998) là cầu thủ bóng đá người Mỹ đang thi đấu cho Borussia Dortmund theo hợp đồng cho mượn từ Chelsea và Đội tuyển bóng đá quốc gia Hoa Kỳ ở vị trí tiền vệ tấn công và tiền vệ cánh.
-      </p>
+        <p>
+         Kim Ji-soo (Hangul: 김지수, Hanja: 金智秀, Hán-Việt: Kim Trí Tú, sinh ngày 3 tháng 1 năm 1995), là một nữ ca sĩ thần tượng, diễn viên, người mẫu, MC người Hàn Quốc. Thành viên của nhóm nhạc nữ Black Pink do công ty giải trí YG Entertainment thành lập và quản lý. Cô được xem là nữ thần tượng thế hệ mới của K-pop được đánh giá cao nhờ tài năng và nhan sắc.
+        </p>
 
-      <p>
-        Là thành viên của đội trẻ Borussia Dortmund từ năm 2015, Pulisic bắt đầu thi đấu cho đội một trong mùa giải 2015-16. Tháng 4 năm 2016, Pulisic trở thành cầu thủ nước ngoài trẻ nhất ghi bàn tại Bundesliga. Cũng trong tháng này, anh cũng trở thành cầu thủ trẻ nhất lập cú đúp tại Bundesliga. Ngày 2 tháng 1 năm 2019, anh chính thức chuyển đến Chelsea với phí chuyển nhượng 64 triệu € để trở thành cầu thủ người Mỹ có giá trị chuyển nhượng cao nhất lịch sử.
-      </p>
+        <p>
+         Kim Ji-soo sinh ngày 3 tháng 1 năm 1995 tại phường Sanbon-dong, thành phố Gunpo, tỉnh Gyeonggi, Hàn Quốc. Có một anh trai và một chị gái. Cô trở thành thực tập sinh chính thức của YG Entertainment vào tháng 7 năm 2011 và được đào tạo làm thực tập sinh 5 năm.
+        </p>
 
-      <p>
-        Pulisic gia nhập đội U-17 Borussia Dortmund từ tháng 2 năm 2015. Tại U-17 Dortmund, anh có 6 bàn thắng và 5 đường chuyền thành bàn. Sau khi được đôn lên đội U-19 Dortmund, anh tiếp tục có thêm 4 bàn thắng và 3 pha kiến tạo. Pulisic bắt đầu có cơ hội thi đấu cho đội một từ tháng 1 năm 2016 sau kỳ nghỉ đông.
-      </p>
+        <p>
+         Ngày 15 tháng 6, YG tiết lộ hình ảnh của thành viên Jisoo, chị cả của nhóm, là người mẫu cho nhiều nhãn hiệu quảng cáo và diễn xuất trong nhiều video âm nhạc.
+        </p>
 
-<!-- Dang Le Nguyen Vu -->
+        <audio controls>
+          <source src="audio/aiiyl.mp3" type="audio/mpeg">
+        </audio>
+
+   </div>
+
+   <div class="people" id="christian-pulisic">
+     <!-- Christian Pulisic -->
+        <h1>Christian Pulisic</h1>
+        <h2>FOOTBALLER</h2>
+
+        <figure>
+         <img src="images/pulisic1.jpg" alt="Christian Pulisic">
+         <figcaption>Christian Pulisic</figcaption>
+        </figure>
+
+        <p>
+         Christian Mate Pulisic (sinh ngày 18 tháng 9 năm 1998) là cầu thủ bóng đá người Mỹ đang thi đấu cho Borussia Dortmund theo hợp đồng cho mượn từ Chelsea và Đội tuyển bóng đá quốc gia Hoa Kỳ ở vị trí tiền vệ tấn công và tiền vệ cánh.
+        </p>
+
+        <p>
+         Là thành viên của đội trẻ Borussia Dortmund từ năm 2015, Pulisic bắt đầu thi đấu cho đội một trong mùa giải 2015-16. Tháng 4 năm 2016, Pulisic trở thành cầu thủ nước ngoài trẻ nhất ghi bàn tại Bundesliga. Cũng trong tháng này, anh cũng trở thành cầu thủ trẻ nhất lập cú đúp tại Bundesliga. Ngày 2 tháng 1 năm 2019, anh chính thức chuyển đến Chelsea với phí chuyển nhượng 64 triệu € để trở thành cầu thủ người Mỹ có giá trị chuyển nhượng cao nhất lịch sử.
+        </p>
+
+        <p>
+         Pulisic gia nhập đội U-17 Borussia Dortmund từ tháng 2 năm 2015. Tại U-17 Dortmund, anh có 6 bàn thắng và 5 đường chuyền thành bàn. Sau khi được đôn lên đội U-19 Dortmund, anh tiếp tục có thêm 4 bàn thắng và 3 pha kiến tạo. Pulisic bắt đầu có cơ hội thi đấu cho đội một từ tháng 1 năm 2016 sau kỳ nghỉ đông.
+        </p>
+
+        <video width="1280" height="720" controls>
+         <source src="video/skills.mp4" type="video/mp4">
+        </video>
+   </div>
+
+   <div class="people" id="nguyen-vu">
+     <!-- Dang Le Nguyen Vu -->
       <h1>Dang Le Nguyen Vu</h1>
       <h2>BUSINESSMAN</h2>
-      <figure>
+
+       <figure>
         <img src="images/dlnv1.jpg" alt="Dang Le Nguyen Vu">
         <figcaption>Dang Le Nguyen Vu</figcaption>
-          </figure>
+       </figure>
 
-          <p>
-            Đặng Lê Nguyên Vũ (sinh năm 1971) là một doanh nhân Việt Nam. Ông là người sáng lập, chủ tịch kiêm Tổng Giám đốc Tập đoàn Trung Nguyên, Việt Nam. Ông là người được National Geographic Traveller và Forbes Asia vinh danh là "Vua Cà phê Việt Nam".
-          </p>
+        <p>
+         Đặng Lê Nguyên Vũ (sinh năm 1971) là một doanh nhân Việt Nam. Ông là người sáng lập, chủ tịch kiêm Tổng Giám đốc Tập đoàn Trung Nguyên, Việt Nam. Ông là người được National Geographic Traveller và Forbes Asia vinh danh là "Vua Cà phê Việt Nam".
+        </p>
 
-          <p>
-            Trưởng thành từ kinh doanh cà phê, Đặng Lê Nguyên Vũ đã nâng dần ý nghĩa của việc kinh doanh cà phê từ kinh doanh thuần túy đến đạo cà phê, đưa Việt Nam thành thánh địa cà phê toàn cầu, và cuối cùng là đưa công ty thành một tôn giáo trong đó ông Vũ được thông linh và được trao sứ mệnh "cứu nhân loại". Trong quá trình này, vợ ông, Lê Hoàng Diệp Thảo đã bị đưa ra khỏi công ty và hai người đã tranh chấp quyền điều khiển công ty từ năm 2015 tới nay.
-          </p>
+        <p>
+         Trưởng thành từ kinh doanh cà phê, Đặng Lê Nguyên Vũ đã nâng dần ý nghĩa của việc kinh doanh cà phê từ kinh doanh thuần túy đến đạo cà phê, đưa Việt Nam thành thánh địa cà phê toàn cầu, và cuối cùng là đưa công ty thành một tôn giáo trong đó ông Vũ được thông linh và được trao sứ mệnh "cứu nhân loại". Trong quá trình này, vợ ông, Lê Hoàng Diệp Thảo đã bị đưa ra khỏi công ty và hai người đã tranh chấp quyền điều khiển công ty từ năm 2015 tới nay.
+        </p>
 
-          <p>
-            Năm 2005, Trung Nguyên khánh thành nhà máy chế biến cà phê lớn nhất Việt Nam tại Bình Dương, cho vợ là bà Lê Hoàng Diệp Thảo, Tổng giám đốc Công ty Cổ phần cà phê hòa tan Trung Nguyên đứng tên. Sau 6 tháng tranh chấp vợ chồng, ngày 21/4/2016 ông đã sang lại tên mình. Cà phê Trung Nguyên đã được Bộ Ngoại giao Việt Nam chọn làm Đại sứ ngoại giao văn hóa và làm quà tặng các nguyên thủ quốc gia.
-          </p>
+        <p>
+         Năm 2005, Trung Nguyên khánh thành nhà máy chế biến cà phê lớn nhất Việt Nam tại Bình Dương, cho vợ là bà Lê Hoàng Diệp Thảo, Tổng giám đốc Công ty Cổ phần cà phê hòa tan Trung Nguyên đứng tên. Sau 6 tháng tranh chấp vợ chồng, ngày 21/4/2016 ông đã sang lại tên mình. Cà phê Trung Nguyên đã được Bộ Ngoại giao Việt Nam chọn làm Đại sứ ngoại giao văn hóa và làm quà tặng các nguyên thủ quốc gia.
+        </p>
+
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/3gyuNx-4hsI">
+        </iframe>
+   </div>
 
  </body>
 </html>
