Adding Top Button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
   </head>
 
   <body>
@@ -42,6 +43,8 @@
         <figcaption>Song Minho</figcaption>
        </figure>
 
+       <a href="#top"> Top </a>
+
        <p>
         Song Mino bắt đầu sự nghiệp ca hát trong giới underground. Anh là rapper trong một khoảng thời gian cùng với Pyo Jihoon (P.O BLOCK B), Woo Jiho (Zico BLOCK B), Woo Jiseok (Taewoon SPEED), Sim Jongsu (SIMS M.I.B), Scotch VIP, và Roydo. Song Minho lấy nghệ danh là Mino hay là Hugeboy Mino, anh đã gia nhập vào Royal Class – một nhóm underground. Mino đã sáng tác và sản xuất nhiều bài hát/rap của riêng mình và nhiều bản mixtape khác.
        </p>
@@ -68,6 +71,8 @@
           <img src="images/jisoo2.jpg" alt="Kim Jisoo">
           <figcaption>Kim Ji-soo</figcaption>
         </figure>
+
+        <a href="#top"> Top </a>
 
         <p>
          Kim Ji-soo (Hangul: 김지수, Hanja: 金智秀, Hán-Việt: Kim Trí Tú, sinh ngày 3 tháng 1 năm 1995), là một nữ ca sĩ thần tượng, diễn viên, người mẫu, MC người Hàn Quốc. Thành viên của nhóm nhạc nữ Black Pink do công ty giải trí YG Entertainment thành lập và quản lý. Cô được xem là nữ thần tượng thế hệ mới của K-pop được đánh giá cao nhờ tài năng và nhan sắc.
@@ -97,6 +102,8 @@
          <figcaption>Christian Pulisic</figcaption>
         </figure>
 
+        <a href="#top"> Top </a>
+
         <p>
          Christian Mate Pulisic (sinh ngày 18 tháng 9 năm 1998) là cầu thủ bóng đá người Mỹ đang thi đấu cho Borussia Dortmund theo hợp đồng cho mượn từ Chelsea và Đội tuyển bóng đá quốc gia Hoa Kỳ ở vị trí tiền vệ tấn công và tiền vệ cánh.
         </p>
@@ -123,6 +130,8 @@
         <img src="images/dlnv1.jpg" alt="Dang Le Nguyen Vu">
         <figcaption>Dang Le Nguyen Vu</figcaption>
        </figure>
+
+       <a href="#top"> Top </a>
 
         <p>
          Đặng Lê Nguyên Vũ (sinh năm 1971) là một doanh nhân Việt Nam. Ông là người sáng lập, chủ tịch kiêm Tổng Giám đốc Tập đoàn Trung Nguyên, Việt Nam. Ông là người được National Geographic Traveller và Forbes Asia vinh danh là "Vua Cà phê Việt Nam".
