--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
      </p>
 
      <p>
+      Bạn có thể xem qua trình độ học vấn của tôi tại <a href="./studies.html">đây</a>.
+     </p>
+
+     <p>
       Một năm kinh nghiệm trôi qua tại ngôi trường này để lại cho tôi nhiều kỉ niệm đáng nhớ cũng như đáng quên. Tuy nhiên tất cả đều là hành trang chuẩn bị cho tương lai của tôi.
      </p>
 
@@ -35,7 +39,10 @@
 
    <div class="people" id="song-minho">
      <!-- Song Minho-->
-      <h1>Song Minho</h1>
+      <a href="https://vi.wikipedia.org/wiki/Song_Mino" target="_blank">
+       <h1>Song Minho</h1>
+      </a>
+
       <h2>SINGER/DANCER</h2>
 
        <figure>
@@ -64,7 +71,10 @@
 
    <div class="people" id="kim-jisoo">
      <!-- Kim Ji-soo -->
+
+      <a href="https://vi.wikipedia.org/wiki/Kim_Ji-soo_(ca_sĩ)" target="_blank">
         <h1>Kim Ji-soo</h1>
+      </a>
         <h2>SINGER/DANCER</h2>
 
         <figure>
@@ -94,7 +104,10 @@
 
    <div class="people" id="christian-pulisic">
      <!-- Christian Pulisic -->
+
+      <a href="https://vi.wikipedia.org/wiki/Christian_Pulisic" target="_blank">
         <h1>Christian Pulisic</h1>
+      </a>
         <h2>FOOTBALLER</h2>
 
         <figure>
@@ -123,7 +136,10 @@
 
    <div class="people" id="nguyen-vu">
      <!-- Dang Le Nguyen Vu -->
-      <h1>Dang Le Nguyen Vu</h1>
+
+      <a href="https://vi.wikipedia.org/wiki/Đặng_Lê_Nguyên_Vũ" target="_blank">
+        <h1>Dang Le Nguyen Vu</h1>
+      </a>
       <h2>BUSINESSMAN</h2>
 
        <figure>
