--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
 
   <body>
    <div class="me">
      <!-- Tran Ngoc Minh Quan -->
-     <h1>Trần Ngọc Minh Quân</h1>
+     <h1 id="top">Trần Ngọc Minh Quân</h1>
      <h2>STUDENT</h2>
 
-     <figure>
+     <figure >
        <img src="images/me1.jpg" alt="Minh Quan">
        <figcaption>Trần Ngọc Minh Quân</figcaption>
      </figure>
@@ -23,16 +23,16 @@
      </p>
 
      <p>
-      Bạn có thể xem qua trình độ học vấn của tôi tại <a href="./studies.html">đây</a>.
+      Bạn có thể xem qua trình độ học vấn của tôi tại <a href="./studies.html">đây</a>
      </p>
 
      <p>
       Một năm kinh nghiệm trôi qua tại ngôi trường này để lại cho tôi nhiều kỉ niệm đáng nhớ cũng như đáng quên. Tuy nhiên tất cả đều là hành trang chuẩn bị cho tương lai của tôi.
      </p>
 
-     <p id="top">
+     <p>
       Tôi có ước mơ ngồi không đếm tiền, mỗi ngày chỉ cần 1 tỉ trong tài khoản thì tôi đã mãn nguyện lắm rồi. Tôi sẽ phấn đấu để toại nguyện được ước mơ của mình. Cảm ơn các bạn đã bỏ thời gian cho tôi.
-      Những người mà tôi hâm mộ là: Song Minho, Kim Ji-soo, Christian Pulisic and Đặng Lê Nguyên Vũ.
+      Những người mà tôi hâm mộ là: <a href="#top-mino">Song Minho</a>, <a href="#top-jisoo">Kim Ji-soo</a>, <a href="#top-pulisic">Christian Pulisic</a> and <a href="#top-vu">Đặng Lê Nguyên Vũ</a>.
      </p>
    </div>
 
@@ -40,7 +40,7 @@
    <div class="people" id="song-minho">
      <!-- Song Minho-->
       <a href="https://vi.wikipedia.org/wiki/Song_Mino" target="_blank">
-       <h1>Song Minho</h1>
+       <h1 id="top-mino">Song Minho</h1>
       </a>
 
       <h2>SINGER/DANCER</h2>
@@ -73,7 +73,7 @@
      <!-- Kim Ji-soo -->
 
       <a href="https://vi.wikipedia.org/wiki/Kim_Ji-soo_(ca_sĩ)" target="_blank">
-        <h1>Kim Ji-soo</h1>
+        <h1 id="top-jisoo">Kim Ji-soo</h1>
       </a>
         <h2>SINGER/DANCER</h2>
 
@@ -106,7 +106,7 @@
      <!-- Christian Pulisic -->
 
       <a href="https://vi.wikipedia.org/wiki/Christian_Pulisic" target="_blank">
-        <h1>Christian Pulisic</h1>
+        <h1 id="top-pulisic">Christian Pulisic</h1>
       </a>
         <h2>FOOTBALLER</h2>
 
@@ -138,7 +138,7 @@
      <!-- Dang Le Nguyen Vu -->
 
       <a href="https://vi.wikipedia.org/wiki/Đặng_Lê_Nguyên_Vũ" target="_blank">
-        <h1>Dang Le Nguyen Vu</h1>
+        <h1 id="top-vu">Dang Le Nguyen Vu</h1>
       </a>
       <h2>BUSINESSMAN</h2>
 
