--- a/studies.html
+++ b/studies.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
+    <h2>HTML Table</h2>
+
+    <table>
+     <tr>
+      <th>Year</th>
+      <th>Scholl</th>
+      <th>Town</th>
+      <th>Country</th>
+    </tr>
+    <tr>
+      <td>2017 - now</td>
+      <td>Viện Nghiên cứu và Đào tạo Việt Anh</td>
+      <td>Đà Nẵng</td>
+      <td>Việt Nam</td>
+    </tr>
+
+    <tr>
+      <td>2014 - 2017</td>
+      <td>Phan Châu Trinh Highschool</td>
+      <td>Đà Nẵng</td>
+      <td>Việt Nam</td>
+    </tr>
+
+    <tr>
+      <td>2010 - 2014</td>
+      <td>Nguyễn Khuyến Secondary Shool</td>
+      <td>Đà Nẵng</td>
+      <td>Việt Nam</td>
+   </tr>
+
+   <tr>
+     <td>2005 - 2010</td>
+     <td>Trần Văn Ơn Elementary School</td>
+     <td>Đà Nẵng</td>
+     <td>Việt Nam</td>
+   </tr>
+
+   <tr>
+     <td>2007 - 2010</td>
+     <td>Hoa Phượng Đỏ Kindergarten</td>
+     <td>Đà Nẵng</td>
+    <td>Việt Nam</td>
+   </tr>
+
+  </table>
 
   </body>
 </html>
