--- a/studies.html
+++ b/studies.html
@@ -11,7 +11,7 @@
     <table>
      <tr>
       <th>Year</th>
-      <th>Scholl</th>
+      <th>School</th>
       <th>Town</th>
       <th>Country</th>
     </tr>
@@ -31,7 +31,7 @@
 
     <tr>
       <td>2010 - 2014</td>
-      <td>Nguyễn Khuyến Secondary Shool</td>
+      <td>Nguyễn Khuyến Secondary School</td>
       <td>Đà Nẵng</td>
       <td>Việt Nam</td>
    </tr>
