--- a/studies.html
+++ b/studies.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
-    <h2>HTML Table</h2>
+    <h2>TRÌNH ĐỘ HỌC VẤN</h2>
 
     <table>
      <tr>
