Adding studies.css

--- a/studies.html
+++ b/studies.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet"  type="text/css" href="/css/studies.css">
   </head>
   <body>
     <h2>TRÌNH ĐỘ HỌC VẤN</h2>
