--- a/studies.html
+++ b/studies.html
@@ -10,48 +10,44 @@
     <h2>TRÌNH ĐỘ HỌC VẤN</h2>
 
     <table>
+      <tr>
+        <th>Year</th>
+        <th>School</th>
+        <th>Town</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>2017 - now</td>
+        <td>Viện Nghiên cứu và Đào tạo Việt Anh</td>
+        <td rowspan="5">Đà Nẵng</td>
+        <td rowspan="5">Việt Nam</td>
+      </tr>
+
+      <tr>
+        <td>2014 - 2017</td>
+        <td>Phan Châu Trinh Highschool</td>
+      </tr>
+
+      <tr>
+        <td>2010 - 2014</td>
+        <td>Nguyễn Khuyến Secondary School</td>
+     </tr>
+
      <tr>
-      <th>Year</th>
-      <th>School</th>
-      <th>Town</th>
-      <th>Country</th>
-    </tr>
-    <tr>
-      <td>2017 - now</td>
-      <td>Viện Nghiên cứu và Đào tạo Việt Anh</td>
-      <td>Đà Nẵng</td>
-      <td>Việt Nam</td>
-    </tr>
+       <td>2005 - 2010</td>
+       <td>Trần Văn Ơn Elementary School</td>
+     </tr>
 
-    <tr>
-      <td>2014 - 2017</td>
-      <td>Phan Châu Trinh Highschool</td>
-      <td>Đà Nẵng</td>
-      <td>Việt Nam</td>
-    </tr>
+     <tr>
+       <td>2007 - 2010</td>
+       <td>Hoa Phượng Đỏ Kindergarten</td>
+     </tr>
+   </table>
 
-    <tr>
-      <td>2010 - 2014</td>
-      <td>Nguyễn Khuyến Secondary School</td>
-      <td>Đà Nẵng</td>
-      <td>Việt Nam</td>
-   </tr>
+   <div id="my-td">
+   </div>
 
-   <tr>
-     <td>2005 - 2010</td>
-     <td>Trần Văn Ơn Elementary School</td>
-     <td>Đà Nẵng</td>
-     <td>Việt Nam</td>
-   </tr>
-
-   <tr>
-     <td>2007 - 2010</td>
-     <td>Hoa Phượng Đỏ Kindergarten</td>
-     <td>Đà Nẵng</td>
-    <td>Việt Nam</td>
-   </tr>
-
-  </table>
+   <script type="text/javascript" src="./scripts/studies.js"></script>
 
   </body>
 </html>
