Preparing for tomorrow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="me">
       <!-- Tran Ngoc Minh Quan -->
-      <h1 id="top">Trần Ngọc Minh Quân</h1>
+      <h1>Trần Ngọc Minh Quân</h1>
       <h2>STUDENT</h2>
 
       <figure >
@@ -30,10 +30,55 @@
         Một năm kinh nghiệm trôi qua tại ngôi trường này để lại cho tôi nhiều kỉ niệm đáng nhớ cũng như đáng quên. Tuy nhiên tất cả đều là hành trang chuẩn bị cho tương lai của tôi.
       </p>
 
-      <p>
+      <p id="top">
         Tôi có ước mơ ngồi không đếm tiền, mỗi ngày chỉ cần 1 tỉ trong tài khoản thì tôi đã mãn nguyện lắm rồi. Tôi sẽ phấn đấu để toại nguyện được ước mơ của mình. Cảm ơn các bạn đã bỏ thời gian cho tôi.
-        Những người mà tôi hâm mộ là: <a href="#top-mino">Song Minho</a>, <a href="#top-jisoo">Kim Ji-soo</a>, <a href="#top-pulisic">Christian Pulisic</a> and <a href="#top-vu">Đặng Lê Nguyên Vũ</a>.
+        Những người mà tôi hâm mộ là:
       </p>
+    </div>
+
+
+     <!-- People I admire -->
+
+    <div>
+      <span class="my-padding-right-19">
+        <button type="button" class="my-button-people-name">
+          Song Minho
+        </button>
+
+        <button type="button" class="my-button-jump-to-people">
+          <a href="#top-mino">#</a>
+        </button>
+      </span>
+
+      <span class="my-padding-right-19">
+        <button type="button" class="my-button-people-name">
+          Kim Ji-soo
+        </button>
+
+        <button type="button" class="my-button-jump-to-people">
+          <a href="#top-jisoo">#</a>
+        </button>
+      </span>
+
+      <span class="my-padding-right-19">
+        <button type="button" class="my-button-people-name">
+          Christian Pulisic
+        </button>
+
+        <button type="button" class="my-button-jump-to-people">
+          <a href="#top-pulisic">#</a>
+        </button>
+      </span>
+
+      <span>
+        <button type="button" class="my-button-people-name">
+          Đặng Lê Nguyên Vũ
+        </button>
+
+        <button type="button" class="my-button-jump-to-people">
+          <a href="#top-vu">#</a>
+        </button>
+      </span>
     </div>
 
 
