--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <!-- People I admire -->
 
     <div>
-      <span class="my-padding-right-19">
+      <div class="my-padding-right-19">
         <button type="button" class="my-button-people-name">
           Song Minho
         </button>
@@ -48,9 +48,9 @@
         <button type="button" class="my-button-jump-to-people">
           <a href="#top-mino">#</a>
         </button>
-      </span>
+      </div>
 
-      <span class="my-padding-right-19">
+      <div class="my-padding-right-19">
         <button type="button" class="my-button-people-name">
           Kim Ji-soo
         </button>
@@ -58,9 +58,9 @@
         <button type="button" class="my-button-jump-to-people">
           <a href="#top-jisoo">#</a>
         </button>
-      </span>
+      </div>
 
-      <span class="my-padding-right-19">
+      <div class="my-padding-right-19">
         <button type="button" class="my-button-people-name">
           Christian Pulisic
         </button>
@@ -68,9 +68,9 @@
         <button type="button" class="my-button-jump-to-people">
           <a href="#top-pulisic">#</a>
         </button>
-      </span>
+      </div>
 
-      <span>
+      <div>
         <button type="button" class="my-button-people-name">
           Đặng Lê Nguyên Vũ
         </button>
@@ -78,7 +78,7 @@
         <button type="button" class="my-button-jump-to-people">
           <a href="#top-vu">#</a>
         </button>
-      </span>
+      </div>
     </div>
 
 
@@ -211,5 +211,7 @@
       <iframe width="1280" height="720" src="https://www.youtube.com/embed/3gyuNx-4hsI"></iframe>
    </div>
 
+    <script type="text/javascript" src="./scripts/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="./scripts/jquery/index.js"></script>
  </body>
 </html>
